# django-icv-search

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/icv_search/: CONTEXT.md  __init__.py  query.py
tests/: test_postgres_backend.py  test_query_builder.py
tests/benchmarks/: bench_bulk_index.py
