[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-icv-search"
version = "1.1.3"
description = "Pluggable search engine integration for Django: index management, document indexing, and search queries with swappable backends."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{name = "Nigel Copley"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = [
    "django",
    "search",
    "meilisearch",
    "full-text-search",
    "indexing",
]
dependencies = [
    "Django>=5.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/nigelcopley/django-icv-search"
Documentation = "https://github.com/nigelcopley/django-icv-search/tree/main/docs"
Changelog = "https://github.com/nigelcopley/django-icv-search/blob/main/CHANGELOG.md"
"Issue Tracker" = "https://github.com/nigelcopley/django-icv-search/issues"
"Source Code" = "https://github.com/nigelcopley/django-icv-search"

[project.optional-dependencies]
icv-core = ["django-icv-core>=0.1.0"]
vespa = ["pyvespa>=0.38"]
solr = ["pysolr>=3.9"]
opensearch = ["opensearch-py>=2.0"]
typesense = ["typesense>=0.20"]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
    "factory-boy>=3.3",
    "ruff>=0.5.0",
    "mypy>=1.10",
    "django-stubs>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "settings"
pythonpath = ["src", "tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "DJ",  # flake8-django
]
ignore = [
    "E501",   # line length handled by the formatter
    "N806",   # User = get_user_model() is standard Django convention
    "SIM105", # contextlib.suppress less readable than try/except/pass for DoesNotExist
]

[tool.ruff.lint.isort]
known-first-party = ["icv_search"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
plugins = ["mypy_django_plugin.main"]
strict = false

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.coverage.run]
source = ["src"]
omit = ["*/migrations/*", "*/testing/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ ==",
]
